[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "langchain-notion-tools"
version = "0.1.0"
description = "LangChain tools for read/write access to Notion via the official API."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Dinesh" }
]
keywords = ["langchain", "notion", "llm", "agents"]
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "langchain-core>=0.3",
  "pydantic>=2",
  "typing-extensions",
  "notion-client>=2",
  "httpx",
  "anyio",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio",
  "ruff",
  "mypy",
  "build",
  "twine",
  "python-semantic-release",
  "hypothesis",
]

[project.urls]
Homepage = "https://github.com/dinesh/langchain-notion-tools"
Repository = "https://github.com/dinesh/langchain-notion-tools"
"Bug Tracker" = "https://github.com/dinesh/langchain-notion-tools/issues"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
include = ["src", "README.md", "LICENSE", "CHANGELOG.md", "pyproject.toml"]

[tool.hatch.build.targets.wheel]
packages = ["src/langchain_notion_tools"]

[tool.semantic_release]
version_variable = "src/langchain_notion_tools/__init__.py:__version__"
branch = "main"
build_command = "pip install build && python -m build"
changelog_file = "CHANGELOG.md"
assets = []

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = [
  "tests",
]

[tool.coverage.run]
branch = true
source = ["langchain_notion_tools"]

[tool.coverage.report]
show_missing = true
skip_empty = true
